--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,4 +1,5 @@
 // custom variables MUST be override before import
+$input-box-shadow: none;
 $warning: #ef782f;
 
 @import "../../../node_modules/bootstrap/scss/bootstrap.scss";
