Add tabs for the folio media page

--- a/src/views/project/styles.css
+++ b/src/views/project/styles.css
@@ -80,7 +80,12 @@
 }
 
 .grid-group-items {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 15px;
+  display: inline-flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+}
+
+.grid-group-items > a,
+.grid-group-items > div {
+  flex: 0 1 8em;
 }
