--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -6,4 +6,4 @@ $warning: #ef782f;
 $body-bg: #000;
 $body-color: #111;
 
-@import "../../../node_modules/bootstrap/scss/bootstrap"
+@import '../../../node_modules/bootstrap/scss/bootstrap';
