MB4-76: Improve matrix deletion and matrix upload.

--- a/src/assets/css/form.css
+++ b/src/assets/css/form.css
@@ -23,6 +23,17 @@
   font-style: italic;
 }
 
+.form-note {
+  color: #666;
+  font-size: 12px;
+  font-weight: normal;
+}
+
+.form-note strong {
+  color: #666;
+  font-weight: bold;
+}
+
 .form-control {
   width: 100%;
   padding: 8px;
