MB4-33: Update CIPRES UI.

--- a/src/assets/css/form.css
+++ b/src/assets/css/form.css
@@ -130,6 +130,18 @@
   border-radius: 4px;
 }
 
+/* Custom Select Dropdown with Arrow */
+.form-select-custom {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='m6 8 4 4 4-4'/%3e%3c/svg%3e");
+  background-position: right 0.5rem center;
+  background-repeat: no-repeat;
+  background-size: 1.5em 1.5em;
+  padding-right: 2.5rem;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
 /* Button Styles */
 .btn-form-group {
   display: flex;
