--- a/src/assets/css/matrixEditor.css
+++ b/src/assets/css/matrixEditor.css
@@ -275,6 +275,13 @@ div.matrixgridCells table {
   font-weight: bold;
 }
 
+.matrixgrid tr th .media-available {
+  color: #666;
+  font-size: 10px;
+  font-style: italic;
+  font-weight: normal;
+}
+
 .matrixgridTaxa .matrixgrid tr td:first-child {
   border-right: 1px solid black;
   overflow: hidden;
