--- a/src/assets/css/matrixEditor.css
+++ b/src/assets/css/matrixEditor.css
@@ -499,6 +499,12 @@ div.matrixgridCells table {
   min-width: 166px;
 }
 
+.cellStateImages .matrixgrid tr td img {
+  max-width: 160px;
+  max-height: 160px;
+  object-fit: contain;
+}
+
 .loadingModal {
   font-size: 13px;
   left: 50%;
@@ -557,6 +563,9 @@ div.matrixgridCells table {
 
 .imageThumbnail img {
   margin: auto;
+  max-width: 140px;
+  max-height: 110px;
+  object-fit: contain;
 }
 
 .imageThumbnail .imageArrowDown,
@@ -1337,6 +1346,12 @@ ol.selectList li:hover span.remove {
   text-overflow: ellipsis;
   vertical-align: middle;
   width: 120px;
+}
+
+.mediaGrid .mediaItem img {
+  max-width: 110px;
+  max-height: 80px;
+  object-fit: contain;
 }
 
 .mediaGrid .mediaItem:hover {
@@ -2187,6 +2202,9 @@ div.loadingMessage > div,
 .characterTooltip div.media img {
   display: block;
   margin: auto;
+  max-width: 75px;
+  max-height: 60px;
+  object-fit: contain;
 }
 
 .characterTooltip div.state {
