--- a/src/assets/css/matrixEditor.css
+++ b/src/assets/css/matrixEditor.css
@@ -594,6 +594,34 @@ div.matrixgridCells table {
   top: 88%;
 }
 
+/* Make ImageRenderer arrows visible and clickable */
+.imageThumbnail .imageArrowUp,
+.imageThumbnail .imageArrowDown {
+  width: 18px;
+  height: 18px;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 2px;
+  cursor: pointer;
+  font-size: 10px;
+  z-index: 2;
+}
+
+.imageThumbnail .imageArrowUp {
+  top: 6%;
+}
+
+.imageThumbnail .imageArrowUp::after {
+  content: '\25B2';
+}
+
+.imageThumbnail .imageArrowDown::after {
+  content: '\25BC';
+}
+
 .imageThumbnail .imageArrowDim {
   opacity: 0.3;
   -moz-opacity: 0.3;
