--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,7 +1,7 @@
 // custom variables MUST be override before import
 $primary: #900;
 $enable-shadows: true;
-$warning: #ef782f;
+$warning: #F17B17;
 // Default variable overrides
 $body-bg: #000;
 $body-color: #111;
