--- a/src/views/project/steps.css
+++ b/src/views/project/steps.css
@@ -3,7 +3,7 @@
 }
 
 .import-step p {
-  color: #ef782f;
+  color: var(--theme-orange);
   font-size: 12px;
   margin-top: 10px;
 }
@@ -33,9 +33,9 @@
 
 .btn-circle {
   background-color: #fff;
-  border: 1px #ef782f solid;
+  border: 1px var(--theme-orange) solid;
   border-radius: 15px;
-  color: #ef782f;
+  color: var(--theme-orange);
   font-size: 12px;
   height: 30px;
   line-height: 1.428571429;
@@ -50,7 +50,7 @@
 }
 
 .btn-primary.btn-circle {
-  background-color: #ef782f;
+  background-color: var(--theme-orange);
   color: #fff;
 }
 
