--- a/src/assets/css/form.css
+++ b/src/assets/css/form.css
@@ -12,7 +12,7 @@
 }
 
 .required {
-  color: #ef782f;
+  color: var(--theme-orange);
   margin-left: 5px;
 }
 
@@ -88,7 +88,7 @@
 }
 
 .removeLink {
-  color: #ef782f;
+  color: var(--theme-orange);
   text-decoration: none;
   margin-left: 10px;
 }
