--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -2,7 +2,7 @@
   background-color: #ffffff !important;
   border: 1px solid #ced4da !important;
   color: #333333;
-  --bs-btn-hover-color: #ef782f;
+  --bs-btn-hover-color: var(--theme-orange);
 }
 
 header {
