--- a/src/assets/css/matrixEditor.css
+++ b/src/assets/css/matrixEditor.css
@@ -644,7 +644,11 @@ div.matrixgridCells table {
   display: inline-block;
 }
 
-.characterOrderingDialog .orderingSelect,
+.characterOrderingDialog .orderingSelect {
+  width: 100%;
+  height: 280px;
+}
+
 .taxaListDialog .taxaSelect {
   width: 100%;
   display: flex;
@@ -652,7 +656,13 @@ div.matrixgridCells table {
 }
 
 .characterOrderingDialog .unorderedCharacterSelect,
-.characterOrderingDialog .orderedCharacterSelect,
+.characterOrderingDialog .orderedCharacterSelect {
+  font-weight: bold;
+  height: 260px;
+  vertical-align: top;
+  width: 47%;
+}
+
 .taxaListDialog .availableTaxaSelect,
 .taxaListDialog .currentTaxaSelect {
   font-weight: bold;
@@ -705,10 +715,6 @@ ol.draggableSelect li.dead:hover {
 
 ol.draggableSelect li.droppable {
   border-top: 2px solid #000;
-}
-
-ol.draggableSelect li.filtered-out {
-  display: none;
 }
 
 .taxaListDialog .taxa-list-header {
